# poke-collect

./: .env  .gitignore  Cargo.toml  Readme.md  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 0001_poke_table.sql  0001_poke_table_new.sql  0002_poke_table_add_is_shiny.sql
src/: main.rs  poke.rs  sprite.rs
