[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["full"]}
reqwest = {version = "0.12.4", features = ["json"]}
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
sha2 = "0.10.8"

